static/css/styles.css

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -78,3 +78,12 @@ input::-webkit-input-placeholder {
   -o-background-size: cover;
   background-size: cover;
 }
+
+#quotes{
+  background: url('/static/pics/M3_exterior_D.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
