--- a/hood/templates/profile/profile.html
+++ b/hood/templates/profile/profile.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load bootstrap4 %}
 
-<div class="container">
+<div style="color:rgb(253, 253, 253);" class="container">
   
 
 <div class="row">
@@ -15,27 +15,29 @@
       src="https://www.bristolbrewing.com/wp-content/uploads/2017/08/default-avatar.png" alt="" width="250px" height="250px""> {{ photos_item.profile.user.username}}</section>            
       {% endif %}
   </div>
-  <div class="col-md-7">
+  <div  class="col-md-7">
       <h4>{{profile.user.username}}</h4>
       <p>{{profile.bio}}</p>
       
-      <button class="btn btn-outline-light"> <a style="color: white;" href="/edit/profile/"> Edit profile</a> <i class="fa fa-cog fa-spin" style="font-size:24px"></i></button>
+      <button class="btn btn-outline-light"> <a class="nav-link" style="color: blue;" href="/edit/profile/"> Edit profile</a></button>
   </div>
 </div>
 <hr>
-{% if posts%}
-<h3>My Projects</h3>
+{% if hoods%}
+<h3>My Hoods</h3>
 <div class="row">
-  {% for posts_items in posts%}
+  {% for hoods_items in hoods%}
       <div class="col-md-4 col-sm-4 col-lg-4 col-xs-4">
           
-        <img src="{{posts_items.image.url}}" width="300px" height="300px" alt="">
-  
+        <img src="{{hoods_items.image.url}}" width="300px" height="250px" alt="">
+        <br>
+      <br>
       </div>
+      
   {% endfor%}
 </div>
   {% else%}
-<h1>No Projects Submitted</h1>
+<h2>No Hoods Created</h2>
 {% endif%}
 
   
