configured email host

--- a/hood/templates/index.html
+++ b/hood/templates/index.html
@@ -5,7 +5,7 @@
 <div style="text-align:center; padding-top: 130px; padding-bottom: 130px; " class="container-fluid" id="moda">
 
         <div class="content text-center">
-                <h1 data-hover="By Luwi"> Welcome  To  HoodWatch</h1>
+                <h1 data-hover="The Nairobian"> Welcome  To  HoodWatch</h1>
               </div>
               <h6 style="text-align:center; color:rgb(253, 253, 253);">{{date|date:"l d  F  Y"}}</h6>
 
